Switch to Services67 (Stripe integration)

--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -32,6 +32,6 @@ aws.secret.key=${?AWS_SECRET_KEY}
 salesforce.api.url="https://test.salesforce.com"
 
 zuora.api.url {
-    rest="https://apisandbox-api.zuora.com/rest/v1"
-    soap="https://apisandbox.zuora.com/apps/services/a/58.0"
+    rest="https://services67.zuora.com/rest/"
+    soap="https://services67.zuora.com/apps/services/a/58.0"
 }
