--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -26,7 +26,7 @@ identity.production.keys=true
 
 salesforce.consumer.key=""
 salesforce.consumer.secret=""
-salesforce.api.url="https://emea.salesforce.com"
+salesforce.api.url="https://test.salesforce.com"
 salesforce.api.username=""
 salesforce.api.password=""
 salesforce.api.token=""
