Change copy for entitlements file

--- a/frontend/conf/benefits.conf
+++ b/frontend/conf/benefits.conf
@@ -1,31 +1,29 @@
-benefits.friend.leadin="From config Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio."
+benefits.friend.leadin="As a friend:"
 benefits.friend.list=[
-    "Book Live event tickets",
-    "other thing",
-    "another thing"
+    "You can book tickets to any Guardian Live event",
+    "Receive an exclusive weekly email guide to upcoming events",
+    "Be part of the Guardian Membership community"
 ]
 benefits.friend.priceText="£(Free)"
 benefits.friend.cta="Become a Friend"
 
-benefits.partner.leadin="From config Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio."
+benefits.partner.leadin="All the benefits of a Friend plus:"
 benefits.partner.list=[
     "Welcome pack",
     "Early booking for live events (1 week before general release)",
-    "20% discount on tickets and plus ones",
-    "20% discount on Masterclasses"
+    "20% discount on tickets and plus ones"
 ]
-benefits.partner.priceText="£15"
+benefits.partner.priceText="£15 (please add yearly price)"
 benefits.partner.cta="Become a Partner"
 
-benefits.patron.leadin="From config Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio."
+benefits.patron.leadin="All the benefits of a Partner plus:"
 benefits.patron.list=[
     "Patron pack",
-    "Invited to patron only events",
-    "Invited to annual patron forum",
-    "Drinks from The Guardian wine rack",
     "Early booking for live events (2 weeks before general release)",
-    "20% discount on tickets and plus ones",
-    "20% discount on Masterclasses"
+    "20% discount on tickets and plus ones"
+    "Patron only events",
+    "An invitation to the annual patron forum",
+    "Drinks from the Guardian wine rack"
 ]
-benefits.patron.priceText="£60"
+benefits.patron.priceText="£60 (please add yearly price)"
 benefits.patron.cta="Become a Patron"
