Rename zuoraSOAP to zuora, we are only using SOAP

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -31,10 +31,7 @@ salesforce.api.username=""
 salesforce.api.password=""
 salesforce.api.token=""
 
-zuora.api.url {
-    rest="https://api.zuora.com/rest"
-    soap="" # WHAT IS THIS?
-}
+zuora.api.url=""
 zuora.api.username=""
 zuora.api.password=""
 
