--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -31,7 +31,4 @@ aws.secret.key=${?AWS_SECRET_KEY}
 
 salesforce.api.url="https://test.salesforce.com"
 
-zuora.api.url {
-    rest="https://services67.zuora.com/rest/"
-    soap="https://services67.zuora.com/apps/services/a/58.0"
-}
+zuora.api.url="https://services67.zuora.com/apps/services/a/58.0"
