get discount working

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -14,6 +14,7 @@ cors.allow.origin="https://profile.theguardian.com"
 eventbrite.api.url="https://www.eventbriteapi.com/v3"
 eventbrite.api.token="***REMOVED***"
 eventbrite.api.event-list-url="users/101063397097/owned_events/"
+eventbrite.api.iframe-url="https://www.eventbrite.com/tickets-external?ref=etckt&v=2"
 
 google.analytics.tracking.id="UA-51507017-1"
 
