Ignore entire /public directory now it's completely auto-generated

--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,4 @@ membership.sublime-workspace
 
 frontend/assets/stylesheets/icons/icons-svg.scss
 frontend/assets/stylesheets/icons/icons-sprite.scss
-frontend/public/images/sprite
+frontend/public/
