--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -32,7 +32,7 @@ salesforce.api.username=""
 salesforce.api.password=""
 salesforce.api.token=""
 
-zuora.api.url=""
+zuora.api.url="https://services67.zuora.com/apps/services/a/58.0"
 zuora.api.username=""
 zuora.api.password=""
 
