update config prices

--- a/frontend/conf/benefits.conf
+++ b/frontend/conf/benefits.conf
@@ -13,7 +13,7 @@ benefits.partner.list=[
     "Early booking for live events (1 week before general release)",
     "20% discount on tickets and plus ones"
 ]
-benefits.partner.priceText="£15 (please add yearly price)"
+benefits.partner.priceText="£15 per month | £135 per year (save £45)"
 benefits.partner.cta="Become a Partner"
 
 benefits.patron.leadin="All the benefits of a Partner plus:"
@@ -25,5 +25,5 @@ benefits.patron.list=[
     "An invitation to the annual patron forum",
     "Drinks from the Guardian wine rack"
 ]
-benefits.patron.priceText="£60 (please add yearly price)"
+benefits.patron.priceText="£60 per month | £540 per year (save £180)"
 benefits.patron.cta="Become a Patron"
