--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,10 @@
     "grunt-karma": "~0.8.3",
     "grunt-scss-lint": "^0.1.12",
     "grunt-shell": "~0.7.0",
-    "karma": "~0.12.14",
+    "karma": "~0.12.0",
     "karma-chrome-launcher": "^0.1.3",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-jasmine": "^0.2.2",
+    "karma-phantomjs-launcher": "^0.1.4",
     "karma-requirejs": "~0.2.1",
     "mkdirp": "^0.5.0",
     "phantomjs": "~1.9.1",
