Remove API URLs from application.conf
This was causing confusion by having the API URL in application.conf
but all the other keys in membership-keys.conf.

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -27,12 +27,12 @@ identity.production.keys=true
 
 salesforce.consumer.key=""
 salesforce.consumer.secret=""
-salesforce.api.url="https://test.salesforce.com"
+salesforce.api.url=""
 salesforce.api.username=""
 salesforce.api.password=""
 salesforce.api.token=""
 
-zuora.api.url="https://services67.zuora.com/apps/services/a/58.0"
+zuora.api.url=""
 zuora.api.username=""
 zuora.api.password=""
 
