--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,6 @@
     "karma-requirejs": "~0.2.1",
     "mkdirp": "^0.5.0",
     "phantomjs": "~1.9.1",
-    "requirejs": "^2.1.11",
-    "svgo": "^0.4.4"
+    "requirejs": "^2.1.11"
   }
 }
