remove extra slash on CODE.conf

--- a/frontend/conf/CODE.conf
+++ b/frontend/conf/CODE.conf
@@ -20,7 +20,7 @@ include "membership"
 identity.webapp.url="https://profile.code.dev-theguardian.com"
 identity.production.keys=false
 
-membership.url="https://membership.code.dev-theguardian.com/"
+membership.url="https://membership.code.dev-theguardian.com"
 membership.debug=true
 
 cors.allow.origin="https://profile.code.dev-theguardian.com"
