Become a member page - Start of button styling

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ membership.sublime-workspace
 frontend/assets/stylesheets/icons/icons-svg.scss
 frontend/assets/stylesheets/icons/icons-sprite.scss
 frontend/public/
+
+npm-debug.log
