--- a/functional-tests/src/main/resources/project.conf
+++ b/functional-tests/src/main/resources/project.conf
@@ -1,11 +1,11 @@
 "environment" : "local"
 "browser" : "chrome"
 "webDriverRemoteUrl" : "http://localhost:4444/wd/hub"
-"testBaseUrl" : "https://mem.thegulocal.com"
+"testBaseUrl" : "https://membership.code.dev-theguardian.com/"
 "user" : {
-  "identityReturn" : "https://profile.thegulocal.com/signin?returnUrl=https%3A%2F%2Fmem.thegulocal.com",
-  "partnerPayment" : "https://mem.thegulocal.com/join/partner/payment",
-  "accountEdit" : "https://profile.thegulocal.com/account/edit",
-  "membershipEdit" : "https://profile.thegulocal.com/membership/edit",
-  "identity" : "https://profile.thegulocal.com/signin"
+  "identityReturn" : "https://profile.code.dev-theguardian.com/signin?returnUrl=https%3A%2F%2Fmembership.code.dev-theguardian.com/",
+  "partnerPayment" : "https://membership.code.dev-theguardian.com/join/partner/payment",
+  "accountEdit"    : "https://profile.code.dev-theguardian.com/account/edit",
+  "membershipEdit" : "https://profile.code.dev-theguardian.com/membership/edit",
+  "identity"       : "https://profile.code.dev-theguardian.com/signin"
 }
