--- a/frontend/conf/CODE.conf
+++ b/frontend/conf/CODE.conf
@@ -19,7 +19,7 @@ include "membership"
 
 identity.webapp.url="https://profile.code.dev-theguardian.com"
 identity.production.keys=false
-id.api.client.token="membership-dev-client-token"
+identity.api.client.token=""
 
 membership.url="https://membership.code.dev-theguardian.com"
 membership.debug=true
