Cache the hell out of static assets

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -59,3 +59,5 @@ logger.application=DEBUG
 include file("/etc/gu/membership-keys.conf")
 include "benefits"
 
+# cache static assets for a year
+assets.defaultCache="max-age=31536000"
