--- a/frontend/conf/CODE.conf
+++ b/frontend/conf/CODE.conf
@@ -19,6 +19,7 @@ include "membership"
 
 identity.webapp.url="https://profile.code.dev-theguardian.com"
 identity.production.keys=false
+identity.api.url="https://idapi.code.dev-theguardian.com"
 identity.api.client.token=""
 
 membership.url="https://membership.code.dev-theguardian.com"
