Accept any cert on code

--- a/frontend/conf/CODE.conf
+++ b/frontend/conf/CODE.conf
@@ -21,7 +21,8 @@ identity.webapp.url="https://profile.code.dev-theguardian.com"
 identity.production.keys=false
 identity.api.url="https://idapi.code.dev-theguardian.com"
 identity.api.client.token=""
-
+ws.acceptAnyCertificate=true
+cept
 membership.url="https://membership.code.dev-theguardian.com"
 membership.debug=true
 
