--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -38,6 +38,12 @@ zuora.api.url=""
 zuora.api.username=""
 zuora.api.password=""
 
+zuora.api.friend="2c92c0f945fee1c90146057402c7066b"
+zuora.api.partner.monthly="2c92c0f945fee1c9014605749e450969"
+zuora.api.partner.annual="2c92c0f8471e22bb01471ffe9596366c"
+zuora.api.patron.monthly="2c92c0f845fed48301460578277167c3"
+zuora.api.patron.annual="2c92c0f9471e145d01471ffd7c304df9"
+
 #### Play Configuration
 
 # Secret key
