--- a/frontend/conf/CODE.conf
+++ b/frontend/conf/CODE.conf
@@ -31,3 +31,5 @@ cors.allow.origin="https://profile.code.dev-theguardian.com"
 # This is the current exception to putting credentials into this file, for now.
 aws.access.key=${?AWS_ACCESS_KEY}
 aws.secret.key=${?AWS_SECRET_KEY}
+
+eventbrite.api.token="***REMOVED***"
