added membership.dev toekn in for code environment

--- a/frontend/conf/membership.conf
+++ b/frontend/conf/membership.conf
@@ -5,3 +5,5 @@
 # If you have Masterclasses-specific overrides, put them into 'memb-masterclasses.conf'
 
 include "application"
+
+eventbrite.api.token="***REMOVED***"
