--- a/frontend/assets/javascripts/bower.json
+++ b/frontend/assets/javascripts/bower.json
@@ -5,6 +5,7 @@
     "qwery": "~4.0.0",
     "bonzo": "~2.0.0",
     "bean": "~1.0.6",
+    "domready": "~1.0.5",
     "reqwest": "~1.1.0",
     "html5shiv": "~3.7.2",
     "zxcvbn": "*",
