--- a/frontend/conf/membership-CODE.conf
+++ b/frontend/conf/membership-CODE.conf
@@ -15,7 +15,7 @@
 # (see http://stackoverflow.com/a/11366713/438886 for more details)
 
 # Change this to "membership" or "memb-masterclasses" as appropriate
-include "membership"
+include "membership-PROD"
 
 identity.webapp.url="https://profile.code.dev-theguardian.com"
 identity.production.keys=false
