Load images from S3 for event list items

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -27,6 +27,8 @@ identity.production.keys=true
 identity.api.url="https://idapi.theguardian.com"
 id.api.client.token=""
 
+membership.event.images.url="http://membership-eb-images.s3-website-eu-west-1.amazonaws.com/"
+
 salesforce.consumer.key=""
 salesforce.consumer.secret=""
 salesforce.api.url=""
