maintenance to the functional tests

--- a/functional-tests/src/main/resources/project.conf
+++ b/functional-tests/src/main/resources/project.conf
@@ -2,6 +2,7 @@
 "browser" : "chrome"
 "webDriverRemoteUrl" : "http://localhost:4444/wd/hub"
 "testBaseUrl" : "https://membership.code.dev-theguardian.com/"
+"browsers" : [{ "name" : "chrome", "version" : "latest" }]
 "user" : {
   "identityReturn" : "https://profile.code.dev-theguardian.com/signin?returnUrl=https%3A%2F%2Fmembership.code.dev-theguardian.com/",
   "partnerPayment" : "https://membership.code.dev-theguardian.com/join/partner/payment",
