--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -25,7 +25,7 @@ identity.production.keys=true
 identity.api.url="https://idapi.theguardian.com"
 id.api.client.token=""
 
-membership.event.images.url="http://membership-eb-images.s3-website-eu-west-1.amazonaws.com/"
+membership.event.images.url="https://s3-eu-west-1.amazonaws.com/membership-eb-images/"
 
 salesforce.consumer.key=""
 salesforce.consumer.secret=""
