Added basic EmailService

--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -25,6 +25,7 @@ ws.acceptAnyCertificate=true
 
 membership.url="https://mem.thegulocal.com"
 membership.debug=true
+membership.feedback="membership.dev@theguardian.com"
 
 cors.allow.origin="https://profile.thegulocal.com"
 
