--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -7,7 +7,7 @@ index.title="Home Page"
 
 membership.url="https://membership.theguardian.com"
 membership.debug=false
-membership.feedback="membershipfeedback@theguardian.com"
+membership.feedback="membership@theguardian.com"
 
 event.discountMultiplier=0.8
 
