Respect the ordering data from the Event Ordering tool
Note that we don't fail the healthcheck if we can't read the ordering data-
because this failure is not serious enough to take down the site.

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -16,6 +16,7 @@ eventbrite.api.url="https://www.eventbriteapi.com/v3"
 eventbrite.api.token="***REMOVED***"
 eventbrite.api.event-list-url="users/me/owned_events/"
 eventbrite.api.iframe-url="https://www.eventbrite.com/tickets-external?ref=etckt&v=2"
+event.ordering.json="http://s3-eu-west-1.amazonaws.com/membership-eb-images/order/order.json"
 
 google.analytics.tracking.id="UA-51507017-1"
 
