Added configuration settings for how often we call the Eventbrite service. This should reduce the amount we are rate limited.

--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -32,3 +32,6 @@ cors.allow.origin="https://profile.thegulocal.com"
 # This is the current exception to putting credentials into this file, for now.
 aws.access.key=${?AWS_ACCESS_KEY}
 aws.secret.key=${?AWS_SECRET_KEY}
+
+eventbrite.api.refresh-time-all-events-seconds=360
+eventbrite.api.refresh-time-priority-events-seconds=300
