--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -17,6 +17,9 @@ eventbrite.api.url="https://www.eventbriteapi.com/v3"
 eventbrite.api.token="***REMOVED***"
 eventbrite.api.event-list-url="users/me/owned_events/"
 eventbrite.api.iframe-url="https://www.eventbrite.com/tickets-external?ref=etckt&v=2"
+eventbrite.api.refresh-time-all-events-seconds=59
+eventbrite.api.refresh-time-priority-events-seconds=29
+
 event.ordering.json="http://s3-eu-west-1.amazonaws.com/membership-eb-images/order/order.json"
 
 google.analytics.tracking.id="UA-51507017-1"
