--- a/functional-tests/src/main/resources/project.conf
+++ b/functional-tests/src/main/resources/project.conf
@@ -6,6 +6,11 @@
   "testBaseUrl" : "https://membership.code.dev-theguardian.com/"
 }
 
+"projectName" : "Membership"
+"plugin": {
+  "teststash" : { "url" : "54.77.196.196:9000" }
+}
+
 "browsers" : [{ "name" : "chrome", "version" : "latest" }]
 "user" : {
   "identityReturn" : "https://profile.code.dev-theguardian.com/signin?returnUrl=https%3A%2F%2Fmembership.code.dev-theguardian.com/",
