First pass at sending metrics to Cloudwatch. Push the status response codes from Identity so that we can see alert on error responses in CloudWatch

--- a/frontend/conf/membership.conf
+++ b/frontend/conf/membership.conf
@@ -11,3 +11,5 @@ include "application"
 # by request the guardian live events are needed on production so this is a quick fix until
 # I can work with a BE dev to discuss why the inheritance is not working
 eventbrite.api.token="***REMOVED***"
+
+stage="PROD"
