--- a/frontend/conf/CODE.conf
+++ b/frontend/conf/CODE.conf
@@ -36,3 +36,4 @@ eventbrite.api.token="***REMOVED***"
 eventbrite.api.refresh-time-all-events-seconds=360
 eventbrite.api.refresh-time-priority-events-seconds=300
 
+stage="CODE"
