--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -35,3 +35,5 @@ aws.secret.key=${?AWS_SECRET_KEY}
 
 eventbrite.api.refresh-time-all-events-seconds=360
 eventbrite.api.refresh-time-priority-events-seconds=300
+
+stage="DEV"
