Move the Stripe public key to a config file

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -24,7 +24,8 @@ event.ordering.json="http://s3-eu-west-1.amazonaws.com/membership-eb-images/orde
 google.analytics.tracking.id="UA-51507017-1"
 
 stripe.api.url="https://api.stripe.com/v1"
-stripe.api.secret=""
+stripe.api.key.secret=""
+stripe.api.key.public=""
 
 identity.webapp.url="https://profile.theguardian.com"
 identity.production.keys=true
