that's so raven

--- a/frontend/assets/javascripts/bower.json
+++ b/frontend/assets/javascripts/bower.json
@@ -10,6 +10,7 @@
     "html5shiv": "~3.7.2",
     "zxcvbn": "*",
     "curl": "~0.8.10",
-    "imager.js": "~0.2.0"
+    "imager.js": "~0.2.0",
+    "raven-js": "~1.1.16"
   }
 }
