added guardian terms live events url to config

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -74,3 +74,5 @@ include "benefits"
 
 # cache static assets for a year
 assets.defaultCache="max-age=31536000"
+
+guardian.live.events.terms.url ="http://www.theguardian.com/info/2014/sep/09/guardian-live-events-terms-and-conditions"
