--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -76,7 +76,7 @@ include "benefits"
 assets.defaultCache="max-age=31536000"
 
 guardian.live.events.terms.url ="http://www.theguardian.com/info/2014/sep/09/guardian-live-events-terms-and-conditions"
-
-guardian.membership.terms.url ="http://www.theguardian.com/info/2014/sep/09/guardian-membership-terms-and-conditions"
-
 guardian.privacy.url="http://www.theguardian.com/help/privacy-policy"
+guardian.membership.terms.url ="http://www.theguardian.com/info/2014/sep/09/guardian-membership-terms-and-conditions"
+guardian.membership.building.blog.url="http://theguardian.com/membership/midland-goods-shed-progress/"
+guardian.membership.building.space.url="http://theguardian.com/membership/2014/sep/10/-sp-midland-goods-shed-guardian-events-membership-building-space"
