--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -80,3 +80,5 @@ guardian.privacy.url="http://www.theguardian.com/help/privacy-policy"
 guardian.membership.terms.url ="http://www.theguardian.com/info/2014/sep/09/guardian-membership-terms-and-conditions"
 guardian.membership.building.blog.url="http://theguardian.com/membership/midland-goods-shed-progress/"
 guardian.membership.building.space.url="http://www.theguardian.com/membership/midland-goods-shed-progress/2014/sep/10/-sp-midland-goods-shed-guardian-events-membership-building-space"
+
+ophan.js.url="//j.ophan.co.uk/ophan.ng"
