Add connection draining policy: http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-elb-connectiondrainingpolicy.html Connection draining ensures that the load balancer completes serving all in-flight requests made to a registered instance when the instance is deregistered or becomes unhealthy. Without connection draining, the load balancer closes connections to deregistered or unhealthy instances, and any in-flight requests are not completed.

--- a/cloud-formation/membership-app.cf.json
+++ b/cloud-formation/membership-app.cf.json
@@ -180,6 +180,10 @@
                     "UnhealthyThreshold" : "2",
                     "Interval" : "10",
                     "Timeout" : "5"
+                },
+                "ConnectionDrainingPolicy": {
+                    "Enabled" : "true",
+                    "Timeout" : "60"
                 }
             }
         },
