--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt": "^0.4.5",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "~0.9.0",
