move analytics ID into staged configs

--- a/frontend/conf/CODE.conf
+++ b/frontend/conf/CODE.conf
@@ -18,4 +18,6 @@ eventbrite.api.token="***REMOVED***"
 eventbrite.api.refresh-time-all-events-seconds=360
 eventbrite.api.refresh-time-priority-events-seconds=300
 
+google.analytics.tracking.id="UA-51507017-4"
+
 stage="CODE"
