--- a/frontend/conf/PROD.conf
+++ b/frontend/conf/PROD.conf
@@ -8,4 +8,6 @@ include "application"
 # I can work with a BE dev to discuss why the inheritance is not working
 eventbrite.api.token="***REMOVED***"
 
+google.analytics.tracking.id="UA-51507017-1"
+
 stage="PROD"
