--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -34,4 +34,6 @@ aws.secret.key=${?AWS_SECRET_KEY}
 eventbrite.api.refresh-time-all-events-seconds=360
 eventbrite.api.refresh-time-priority-events-seconds=300
 
+google.analytics.tracking.id="UA-51507017-4"
+
 stage="DEV"
