locked down guss version and brought in pasteup-palette dependency

--- a/frontend/assets/stylesheets/bower.json
+++ b/frontend/assets/stylesheets/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "membership stylesheets",
   "dependencies": {
-    "guss": "3.3.0"
+    "guss": "3.3.0",
+    "pasteup-palette": "3.3.0"
   }
 }
