Don't create a LogGroup in CF script
For some reason we can create Log groups manually but not via CF at the
moment (the template fails to load and says not supported in this
region). We should contact AWS but until then just use a fixed LogGroup
name

--- a/cloud-formation/membership-app.cf.json
+++ b/cloud-formation/membership-app.cf.json
@@ -97,8 +97,7 @@
                         "chmod 0600 /etc/gu/membership-keys.conf",
 
                         "wget https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py",
-                        {"Fn:Join": ["", ["sed -i 's/__LOG_GROUP/", { "Ref": "FrontendLogGroup" }, "/' $CONF_DIR/logger.conf"]]},
-                        {"Fn:Join": [" ", ["python awslogs-agent-setup.py -nr", { "Ref": "AWS::Region" }, "-c $CONF_DIR/logger.conf" ]]},
+                        {"Fn::Join": [" ", ["python awslogs-agent-setup.py -nr", { "Ref": "AWS::Region" }, "-c $CONF_DIR/logger.conf" ]]},
 
                         {"Fn::Join":["", ["sed 's/__STAGE/", { "Ref" : "Stage" } ,"/' $CONF_DIR/upstart.conf > /etc/init/membership-app.conf"]]},
 
@@ -179,10 +178,6 @@
                     "Ref": "MembershipAppRole"
                 } ]
             }
-        },
-
-        "FrontendLogGroup": {
-            "Type": "AWS::Logs::LogGroup"
         },
 
         "FrontendElasticLoadBalancer" : {
