--- a/frontend/conf/logger.conf
+++ b/frontend/conf/logger.conf
@@ -3,6 +3,6 @@ state_file = /var/awslogs/agent-state
 
 [/membership/logs/frontend.log]
 file = /membership/logs/frontend.log
-log_group_name = __LOG_GROUP
+log_group_name = FrontendLogs
 log_stream_name = {instance_id}/frontend.log
 datetime_format = %Y-%m-%d %H:%M-%S
