--- a/frontend/conf/logger.conf
+++ b/frontend/conf/logger.conf
@@ -4,5 +4,5 @@ state_file = /var/awslogs/agent-state
 [/membership/logs/frontend.log]
 file = /membership/logs/frontend.log
 log_group_name = FrontendLogs
-log_stream_name = {instance_id}/frontend.log
+log_stream_name = __DATE/__BUILD/{instance_id}/frontend.log
 datetime_format = %Y-%m-%d %H:%M-%S
