--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -22,6 +22,14 @@ eventbrite.api.refresh-time-priority-events-seconds=29
 
 event.ordering.json="http://s3-eu-west-1.amazonaws.com/membership-eb-images/order/order.json"
 
+facebook.joiner.conversion.friend="6019967974789"
+facebook.joiner.conversion.partner="6019967995989"
+facebook.joiner.conversion.patron="6019968011389"
+
+google.adwords.joiner.conversion.friend="2Am1CLrttFYQ-fOZzQM"
+google.adwords.joiner.conversion.partner="967SCKD1tFYQ-fOZzQM"
+google.adwords.joiner.conversion.patron="8OIRCKrKtFYQ-fOZzQM"
+
 stripe.api.url="https://api.stripe.com/v1"
 stripe.api.key.secret=""
 stripe.api.key.public=""
