added urls to config

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -13,6 +13,8 @@ event.discountMultiplier=0.8
 
 cors.allow.origin="https://profile.theguardian.com"
 
+eventbrite.url="http://www.eventbrite.co.uk"
+
 eventbrite.api.url="https://www.eventbriteapi.com/v3"
 eventbrite.api.token="***REMOVED***"
 eventbrite.api.event-list-url="users/me/owned_events/"
@@ -76,6 +78,7 @@ include "benefits"
 # cache static assets for a year
 assets.defaultCache="max-age=31536000"
 
+guardian.url="http://www.theguardian.com"
 guardian.live.events.terms.url ="http://www.theguardian.com/info/2014/sep/09/guardian-live-events-terms-and-conditions"
 guardian.privacy.url="http://www.theguardian.com/help/privacy-policy"
 guardian.membership.terms.url ="http://www.theguardian.com/info/2014/sep/09/guardian-membership-terms-and-conditions"
