Add NGW Membership URL to config

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -86,6 +86,7 @@ assets.defaultCache="max-age=31536000"
 
 guardian.live.events.terms.url ="http://www.theguardian.com/info/2014/sep/09/guardian-live-events-terms-and-conditions"
 guardian.privacy.url="http://www.theguardian.com/help/privacy-policy"
+guardian.membership.url="http://www.theguardian.com/membership"
 guardian.membership.terms.url ="http://www.theguardian.com/info/2014/sep/09/guardian-membership-terms-and-conditions"
 guardian.membership.building.blog.url="http://theguardian.com/membership/midland-goods-shed-progress/"
 guardian.membership.building.space.url="http://www.theguardian.com/membership/midland-goods-shed-progress/2014/sep/10/-sp-midland-goods-shed-guardian-events-membership-building-space"
