--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -16,7 +16,7 @@ cors.allow.origin="https://profile.theguardian.com"
 eventbrite.url="http://www.eventbrite.co.uk"
 
 eventbrite.api.url="https://www.eventbriteapi.com/v3"
-eventbrite.api.token="***REMOVED***"
+eventbrite.api.token=""
 eventbrite.api.event-list-url="users/me/owned_events/"
 eventbrite.api.iframe-url="https://www.eventbrite.com/tickets-external?ref=etckt&v=2"
 eventbrite.api.refresh-time-all-events-seconds=59
