Move Facebook and Twitter app credentials to conf

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -24,6 +24,8 @@ eventbrite.api.refresh-time-priority-events-seconds=29
 
 event.ordering.json="http://s3-eu-west-1.amazonaws.com/membership-eb-images/order/order.json"
 
+facebook.app.id=180444840287
+
 facebook.joiner.conversion.friend="6019967974789"
 facebook.joiner.conversion.partner="6019967995989"
 facebook.joiner.conversion.patron="6019968011389"
@@ -51,6 +53,12 @@ salesforce.api.url=""
 salesforce.api.username=""
 salesforce.api.password=""
 salesforce.api.token=""
+
+twitter.username="@gdnmembership"
+twitter.app.iphone.name="The Guardian"
+twitter.app.iphone.id=409128287
+twitter.app.googleplay.name="The Guardian"
+twitter.app.googleplay.id="com.guardian"
 
 zuora.api.url=""
 zuora.api.username=""
