Distinguish test users
At the moment, the only change in behaviour is to add a 'VALID TEST USER'
HTML comment just above the users first & last name on the enter-details
joining page.

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -67,6 +67,7 @@ zuora.api.patron.annual=""
 # Secret key
 # ~~~~~
 application.secret=""
+identity.test.users.secret=""
 
 # The application languages
 # ~~~~~
