--- a/functional-tests/src/main/resources/project.conf
+++ b/functional-tests/src/main/resources/project.conf
@@ -14,7 +14,7 @@
 
 "browsers" : [{ "name" : "chrome", "version" : "latest" }]
 "user" : {
-  "identityReturn" : "https://profile.code.dev-theguardian.com/signin?returnUrl=https%3A%2F%2Fmembership.code.dev-theguardian.com/",
+  "identityReturn" : "https://profile.code.dev-theguardian.com/signin?returnUrl=https%3A%2F%2Fmembership.code.dev-theguardian.com/&skipConfirmation=true",
   "partnerPayment" : "https://membership.code.dev-theguardian.com/join/partner/payment",
   "accountEdit"    : "https://profile.code.dev-theguardian.com/account/edit",
   "membershipEdit" : "https://profile.code.dev-theguardian.com/membership/edit",
