Fix related Twitter share and config style

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -54,7 +54,7 @@ salesforce.api.username=""
 salesforce.api.password=""
 salesforce.api.token=""
 
-twitter.username="@gdnmembership"
+twitter.username="gdnmembership"
 twitter.app.iphone.name="The Guardian"
 twitter.app.iphone.id=409128287
 twitter.app.googleplay.name="The Guardian"
