add phantomjs support

--- a/functional-tests/src/main/resources/project.conf
+++ b/functional-tests/src/main/resources/project.conf
@@ -18,5 +18,6 @@
   "partnerPayment" : "https://membership.code.dev-theguardian.com/join/partner/payment",
   "accountEdit"    : "https://profile.code.dev-theguardian.com/account/edit",
   "membershipEdit" : "https://profile.code.dev-theguardian.com/membership/edit",
-  "identity"       : "https://profile.code.dev-theguardian.com/signin"
+  "identity"       : "https://profile.code.dev-theguardian.com/signin",
+  "browser"        : "chrome"
 }
