sign in test working

--- a/functional-tests/identity/identity-tests/src/main/resources/project.conf
+++ b/functional-tests/identity/identity-tests/src/main/resources/project.conf
@@ -26,7 +26,7 @@
   "googleEmail": ""
   "googlePwd": ""
   "googleLoginName": "" //observe that guardian uses the facebook name if you use the same email for Google+ and Facebook signin
-  "secureEditProfileLink": "https://profile.code.dev-theguardian.com/public/edit" //this is needed because, on Chrome, secure cookies can only be seen on https pages
+  "secureEditProfileLink": "https://profile.thegulocal.com/public/edit" //this is needed because, on Chrome, secure cookies can only be seen on https pages
 }
 
 
