WIP - sketch of the staff authentication for Staff Membership

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -70,6 +70,13 @@ zuora.api.partner.annual=""
 zuora.api.patron.monthly=""
 zuora.api.patron.annual=""
 
+google.oauth {
+  // https://console.developers.google.com/project/guardian-membership/apiui/credential?authuser=1
+  client.id=""
+  client.secret=""
+  callback="https://membership.theguardian.com/oauth2callback"
+}
+
 #### Play Configuration
 
 # Secret key
