--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -34,10 +34,6 @@ google.adwords.joiner.conversion.friend="2Am1CLrttFYQ-fOZzQM"
 google.adwords.joiner.conversion.partner="967SCKD1tFYQ-fOZzQM"
 google.adwords.joiner.conversion.patron="8OIRCKrKtFYQ-fOZzQM"
 
-stripe.api.url="https://api.stripe.com/v1"
-stripe.api.key.secret=""
-stripe.api.key.public=""
-
 identity.webapp.url="https://profile.theguardian.com"
 identity.production.keys=true
 identity.api.url="https://idapi.theguardian.com"
@@ -47,28 +43,52 @@ membership.event.images.url="https://s3-eu-west-1.amazonaws.com/membership-eb-im
 membership.event.images.widths=[300, 460, 620, 940]
 membership.event.images.ratios=[1, 2]
 
-salesforce.consumer.key=""
-salesforce.consumer.secret=""
-salesforce.api.url=""
-salesforce.api.username=""
-salesforce.api.password=""
-salesforce.api.token=""
-
 twitter.username="gdnmembership"
 twitter.app.iphone.name="The Guardian"
 twitter.app.iphone.id=409128287
 twitter.app.googleplay.name="The Guardian"
 twitter.app.googleplay.id="com.guardian"
 
-zuora.api.url=""
-zuora.api.username=""
-zuora.api.password=""
+stripe.api.url="https://api.stripe.com/v1"
 
-zuora.api.friend=""
-zuora.api.partner.monthly=""
-zuora.api.partner.annual=""
-zuora.api.patron.monthly=""
-zuora.api.patron.annual=""
+# Touchpoint-backend environment-specific information
+stripe {
+  api.key {
+    secret = ""
+    public = ""
+  }
+}
+
+salesforce {
+  consumer {
+    key = ""
+    secret = ""
+  }
+  api {
+    url=""
+    username=""
+    password=""
+    token=""
+  }
+}
+
+zuora {
+  api {
+    url=""
+    username=""
+    password=""
+
+    friend=""
+    partner {
+      monthly = ""
+      annual = ""
+    }
+    patron {
+      monthly = ""
+      annual = ""
+    }
+  }
+}
 
 #### Play Configuration
 
