Support having *multiple* Touchpoint Backend envs specified in config
The backends should be nested under 'touchpoint.backend.environments', eg:

touchpoint.backend.environments.DEV
touchpoint.backend.environments.UAT

Choose which backend is the one to use by specifying the
'touchpoint.backend.default' key in config.

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -52,40 +52,44 @@ twitter.app.googleplay.id="com.guardian"
 stripe.api.url="https://api.stripe.com/v1"
 
 # Touchpoint-backend environment-specific information
-stripe {
-  api.key {
-    secret = ""
-    public = ""
-  }
-}
-
-salesforce {
-  consumer {
-    key = ""
-    secret = ""
-  }
-  api {
-    url=""
-    username=""
-    password=""
-    token=""
-  }
-}
-
-zuora {
-  api {
-    url=""
-    username=""
-    password=""
-
-    friend=""
-    partner {
-      monthly = ""
-      annual = ""
+touchpoint.backend {
+  blank {
+    stripe {
+      api.key {
+        secret = ""
+        public = ""
+      }
     }
-    patron {
-      monthly = ""
-      annual = ""
+    salesforce {
+      consumer {
+        key = ""
+        secret = ""
+      }
+      api {
+        url=""
+        username=""
+        password=""
+        token=""
+      }
+    }
+
+    zuora {
+      api {
+        url=""
+        username=""
+        password=""
+
+        friend=""
+        partner {
+          monthly = ""
+          annual = ""
+        }
+        patron {
+          monthly = ""
+          annual = ""
+        }
+      }
+
     }
   }
 }
